src/snapshots/treetop_core__engine__tests__evaluate__test_create_host_requests__alice_create_host_allow.snap
---
source: src/engine.rs
expression: decision
---
{
  "Allow": {
    "policies": [
      {
        "literal": "permit (\n    principal == User::\"alice\",\n    action == Action::\"create_host\",\n    resource is Host\n) when {\n    resource.name like \"web*\" &&\n    resource.ip.isInRange(ip(\"192.0.1.0/24\"))\n};",
        "json": {
          "effect": "permit",
          "principal": {
            "op": "==",
            "entity": {
              "type": "User",
              "id": "alice"
            }
          },
          "action": {
            "op": "==",
            "entity": {
              "type": "Action",
              "id": "create_host"
            }
          },
          "resource": {
            "op": "is",
            "entity_type": "Host"
          },
          "conditions": [
            {
              "kind": "when",
              "body": {
                "&&": {
                  "left": {
                    "like": {
                      "left": {
                        ".": {
                          "left": {
                            "Var": "resource"
                          },
                          "attr": "name"
                        }
                      },
                      "pattern": [
                        {
                          "Literal": "w"
                        },
                        {
                          "Literal": "e"
                        },
                        {
                          "Literal": "b"
                        },
                        "Wildcard"
                      ]
                    }
                  },
                  "right": {
                    "isInRange": [
                      {
                        ".": {
                          "left": {
                            "Var": "resource"
                          },
                          "attr": "ip"
                        }
                      },
                      {
                        "ip": [
                          {
                            "Value": "192.0.1.0/24"
                          }
                        ]
                      }
                    ]
                  }
                }
              }
            }
          ]
        },
        "annotation_id": null,
        "cedar_id": "policy0"
      }
    ],
    "version": {
      "hash": "fb81c2dc092d8f992659f666106894bb0cde22932f2ee2a819b4d8cbc81bfc94",
      "loaded_at": "[timestamp]"
    }
  }
}
